syntax = "proto3";
package transferData;

enum SexEnum {
  Boy = 0;
  Girl = 1;
}

message transferMessage {
  // proto3移除了required
  string name = 1;
  int32 age = 2;
  optional SexEnum sexEnum = 3;
}